Bug 572864 - [17] Create Java 17 version and supporting code in tests
Change-Id: I984f88efb91a82dfaefd933190d4015cad0d0c24
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>
Reviewed-on: https://git.eclipse.org/r/c/jdt/eclipse.jdt.core/+/179421